--- a/app/src/app/character-widget/character-widget.component.scss
+++ b/app/src/app/character-widget/character-widget.component.scss
@@ -1,14 +1,20 @@
+html {
+    margin: 0;
+    padding: 0;
+    background-color: rgb(26, 26, 26);
+}
+
 .container {
     display: flex;
     flex-direction: row;
-    border-color: white;
-    border-style: solid;
-    border-width: 4px;
+    height: 100%;
+    width: 100%;
     div {
         display:flex;
         flex-direction: column;
         width: 100%;
         justify-content: center;
         align-items: center;
+        background-color: rgb(32, 32, 32);
     }
 }
