--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -1,19 +1,54 @@
 * {
     margin: 0;
+    padding: 0;
     background-color: rgb(26, 26, 26);
+    color:white;
+}
+
+.character-widget {
+    width: 400px;
+    height: 100px;
+    border-bottom: 4px solid rgb(26, 26, 26);
 }
 
 .page-container {
     display: flex;
     flex-direction: row;
+    width: 100%;
 
     .main-content {
-        width: 80%;
+        width: 100%;
     }
 
     .side-bar {
-        width: 20%;
         background-color: rgb(32, 32, 32);
+        border: 4px solid rgb(26, 26, 26);
+        
+        .add-character {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 400px;
+            height: 100px;
+            font-size: 4rem;
+            background-color: rgb(32, 32, 32);
+            border-bottom: 4px solid rgb(26, 26, 26);
+        }
+        .add-character-input {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 400px;
+            height: 100px;
+            background-color: rgb(32, 32, 32);
+            border-bottom: 4px solid rgb(26, 26, 26);
+        }
+        p {
+            background-color: rgb(32, 32, 32);
+        }
+        p:hover {
+            cursor: pointer;
+        }
     }
 }
 
@@ -21,7 +56,6 @@
     display:flex;
     flex-direction: column;
     position: absolute;
-    border: 4px solid grey;
     max-width: 300px;
 
     .profile-image {
