--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -134,6 +134,30 @@
     font-size: 3rem;
 }
 
+.main-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    border-right: 2px solid grey;
+
+    .character-content {
+        width: 100%;
+        height: 50%;
+    }
+
+    .guild-content {
+        width: 100%;
+        height: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-top: 2px solid grey;
+    }
+}
+
 @media (max-width: 800px) {
     .cutoff {
         font-size: 1.5rem;
