--- a/app/src/app/fetch-test/fetch-test.component.html
+++ b/app/src/app/fetch-test/fetch-test.component.html
@@ -14,7 +14,7 @@
     
         </div>
         <div class="guild-content">
-            <p><{{guildName}}></p>
+            <h1><{{guildName}}></h1>
             <p>{{guildProgress}}</p>
             <p>{{guildRank}}</p>
         </div>
