--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -126,35 +126,47 @@
 
 }
 .cutoff {
+    background-color: rgb(77, 77, 77);
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 3rem;
     font-size: 3rem;
+    h1, p {
+        background-color: rgb(77, 77, 77);
+    }
 }
 
 .main-content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 100vh;
     width: 100%;
-    border-right: 2px solid grey;
 
     .character-content {
-        width: 100%;
-        height: 50%;
+        background-color: rgb(77, 77, 77);
+        width: 95%;
+        height: 45%;
+        border-top: 2px solid grey;
+        border-radius: 1rem;
     }
 
     .guild-content {
-        width: 100%;
-        height: 50%;
+        background-color: rgb(77, 77, 77);
+        width: 95%;
+        height: 45%;
         display: flex;
         justify-content: center;
         align-items: center;
         border-top: 2px solid grey;
+        border-radius: 1rem;
+
+        h1, p {
+            background-color: rgb(77, 77, 77);
+        }
     }
 }
 
