--- a/app/src/app/raid-widget/raid-widget.component.html
+++ b/app/src/app/raid-widget/raid-widget.component.html
@@ -1,1 +1,8 @@
-<p>raid-widget works!</p>
+<div class="container">
+    <div>
+        <h2>{{raidName}}</h2>
+        <p>{{raidProgress}}</p>
+        <p>World: {{raidWorldRanking}}</p>
+        <p>Region: {{raidNARanking}}</p>
+    </div>
+</div>
