--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -132,8 +132,8 @@
     justify-content: center;
     align-items: center;
     margin: 3rem;
-    font-size: 3rem;
-    h1, p {
+    font-size: 1.5rem;
+    h1, h2, p {
         background-color: rgb(77, 77, 77);
     }
 }
@@ -143,13 +143,13 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
 
     .character-content {
         background-color: rgb(77, 77, 77);
         width: 95%;
-        height: 45%;
+        min-height: 45%;
         border-top: 2px solid grey;
         border-radius: 1rem;
     }
@@ -157,12 +157,18 @@
     .guild-content {
         background-color: rgb(77, 77, 77);
         width: 95%;
-        height: 45%;
+        min-height: 45%;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         border-top: 2px solid grey;
         border-radius: 1rem;
+
+        .raid-data {
+            display: flex;
+            flex-direction: row;
+        }
 
         h1, p {
             background-color: rgb(77, 77, 77);
