--- a/app/src/app/character-widget/character-widget.component.scss
+++ b/app/src/app/character-widget/character-widget.component.scss
@@ -1,3 +1,6 @@
+* {
+    background-color: rgb(77, 77, 77);
+}
 .container {
     display: flex;
     flex-direction: row;
@@ -9,6 +12,6 @@
         width: 100%;
         justify-content: center;
         align-items: center;
-        background-color: rgb(32, 32, 32);
+        background-color: rgb(77, 77, 77);
     }
 }
