--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -21,21 +21,31 @@
     }
 
     .side-bar {
-        background-color: rgb(32, 32, 32);
+        margin: 1.5rem 1.5rem 1.5rem 0;
+        background-color: rgb(77, 77, 77);
         border: 4px solid rgb(26, 26, 26);
-        height: 99vh;
+        border-radius: 1.5rem;
+        height: 90vh;
 
         #character-input {
+            border-top-left-radius: 1.5rem;
+            border-top-right-radius: 1.5rem;
+            border-bottom: 4px solid rgb(26, 26, 26);
             display: flex;
             flex-direction: row;
             align-items: center;
-            background-color: rgb(32, 32, 32);
-            border-bottom: 4px solid rgb(26, 26, 26);
+            background-color: rgb(77, 77, 77);
             width: 400px;
             height:100px;
+            border-top: 2px solid grey;
+
+            p {
+                background-color: rgb(77, 77, 77);
+            }
 
             img {
                 height: 100%;
+                border-top-left-radius: 1.5rem;
             }
 
             .input-boxes {
@@ -54,8 +64,12 @@
             width: 400px;
             height: 100px;
             font-size: 4rem;
-            background-color: rgb(32, 32, 32);
+            background-color: rgb(77, 77, 77);
             border-bottom: 4px solid rgb(26, 26, 26);
+
+            p {
+                background-color: rgb(77, 77, 77);
+            }
         }
         .add-character-input {
             display: flex;
@@ -63,7 +77,7 @@
             justify-content: center;
             width: 400px;
             height: 100px;
-            background-color: rgb(32, 32, 32);
+            background-color: rgb(77, 77, 77);
             border-bottom: 4px solid rgb(26, 26, 26);
 
             .add-friend-input-layout {
@@ -143,7 +157,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    min-height: 100vh;
+    min-height: 90vh;
     width: 100%;
 
     .character-content {
