--- a/app/src/app/raid-widget/raid-widget.component.scss
+++ b/app/src/app/raid-widget/raid-widget.component.scss
@@ -12,7 +12,7 @@
         flex-direction: column;
         flex-wrap: wrap;
         width: 100%;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         text-transform: capitalize;
         text-align: center;
