--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -100,7 +100,7 @@
                 display: flex;
                 flex-direction: column;
 
-                p {
+                p, input, button {
                     background-color: rgb(77, 77, 77);
                 }
 
