--- a/app/src/app/app.component.scss
+++ b/app/src/app/app.component.scss
@@ -1,3 +1,16 @@
+* {
+    h1 {
+        color: rgb(184, 80, 66);
+        font-size: 3rem;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    p {
+        font-size: 1.25rem;
+    }
+    color: rgb(163, 194, 188);
+    background-color: rgb(231, 232, 209);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .red {
     color: rgb(218, 0, 0);
 }
@@ -29,7 +42,7 @@
     color: #00FF98
 }
 .paladin {
-    color: #F48CBA
+    color: #F48CBA;
 }
 .priest {
     color: #FFFFFF
@@ -38,7 +51,7 @@
     color: #FFF468
 }
 .shaman {
-    color: #0070DD
+    color: #0070DD;
 }
 .warlock {
     color: #8788EE
@@ -46,12 +59,43 @@
 .warrior {
     color: #C69B6D
 }
-.alliance {
-    background-color: #03001a
+
+.death-knight-background {
+    background-color: #C41E3A
 }
-.horde {
-    background-color: #1d0000
+.demon-hunter-background {
+    background-color: #A330C9
 }
-.white {
-    background-color: rgb(77, 77, 77);
+.druid-background {
+    background-color: #FF7C0A
+}
+.evoker-background {
+    background-color: #33937F
+}
+.hunter-background {
+    background-color: #AAD372
+}
+.mage-background {
+    background-color: #3FC7EB
+}
+.monk-background {
+    background-color: #00FF98
+}
+.paladin-background {
+    background-color: #F48CBA;
+}
+.priest-background {
+    background-color: #FFFFFF
+}
+.rogue-background {
+    background-color: #FFF468
+}
+.shaman-background {
+    background-color: #0070DD;
+}
+.warlock-background {
+    background-color: #8788EE
+}
+.warrior-background {
+    background-color: #C69B6D
 }
