--- a/app/src/app/character-widget/character-widget.component.html
+++ b/app/src/app/character-widget/character-widget.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <img src="{{profilePicture}}">
-    <div>
-        <p>{{characterName}}</p>
-        <p>{{rating}}</p>
+    <div class="{{class}}">
+        <p class={{class}}>{{characterName}}</p>
+        <p class={{class}}>{{rating}}</p>
     </div>
 </div>
