--- a/app/src/app/character-widget/character-widget.component.scss
+++ b/app/src/app/character-widget/character-widget.component.scss
@@ -1,18 +1,28 @@
 @import "../app.component.scss";
-* {
-    background-color: rgb(77, 77, 77);
-}
 .container {
     display: flex;
     flex-direction: row;
     height: 100%;
     width: 100%;
+    margin-top: -3px;
+
+    img {
+        border-left: 3px solid black;
+        border-top: 3px solid black;
+        border-bottom: 3px solid black;
+    }
+
     div {
         display:flex;
         flex-direction: column;
         width: 100%;
         justify-content: center;
         align-items: center;
-        background-color: rgb(77, 77, 77);
+        border: 3px solid black;
+        
+        p {
+            font-size: 1.5rem;
+            color: black;
+        }
     }
 }
