--- a/app/src/app/dungeon-widget/dungeon-widget.component.scss
+++ b/app/src/app/dungeon-widget/dungeon-widget.component.scss
@@ -1,7 +1,4 @@
 @import "../app.component.scss";
-* {
-    background-color: rgb(77, 77, 77);
-}
 
 .container {
     display: flex;
@@ -20,15 +17,18 @@
         text-align: center;
         max-width: 200px;
         max-height: 300px;
-        margin: 1rem;
+        margin-right: -3px;
 
-        .dungeon {
-            border-radius: 1rem;
-            padding: 0.2rem;
+        h2 {
+            border: 2px solid rgb(184, 80, 66);
+            min-width: 100px;
+            padding: 0.5rem;
+            color: rgb(163, 194, 188);
         }
 
-        h2, p {
-            margin: 0.5rem;
+        p {
+            color: black;
+            margin: 0.2rem;
         }
     }
 }
