--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -2,13 +2,11 @@
 * {
     margin: 0;
     padding: 0;
-    color:white;
 }
 
 .character-widget {
     width: 400px;
     height: 12%;
-    border-bottom: 4px solid rgb(26, 26, 26);
 }
 
 .page-container {
@@ -23,38 +21,25 @@
         .dungeons {
             display: flex;
             flex-direction: row;
-            justify-content: center;
-            background-color: rgb(77, 77, 77);
+            justify-content: left;
+            margin-left: 1rem;
         }
     }
 
     .side-bar {
         margin: 1.5rem 1.5rem 1.5rem 0;
-        background-color: rgb(77, 77, 77);
-        border: 4px solid rgb(26, 26, 26);
-        border-radius: 1.5rem;
         height: 94vh;
 
 
         #character-input {
-            border-top-left-radius: 1.5rem;
-            border-top-right-radius: 1.5rem;
-            border-bottom: 4px solid rgb(26, 26, 26);
             display: flex;
             flex-direction: row;
             align-items: center;
-            background-color: rgb(77, 77, 77);
             width: 400px;
             height: 12%;
-            border-top: 2px solid grey;
-
-            p,input,button {
-                background-color: rgb(77, 77, 77);
-            }
 
             img {
                 height: 100%;
-                border-top-left-radius: 1.5rem;
             }
 
             .input-boxes {
@@ -73,13 +58,7 @@
             width: 400px;
             height: 12%;
             font-size: 4rem;
-            background-color: rgb(77, 77, 77);
-            border-bottom-left-radius: 1.5rem;
-            border-bottom-right-radius: 1.5rem;
 
-            p {
-                background-color: rgb(77, 77, 77);
-            }
         }
         .add-character-input {
             display: flex;
@@ -87,9 +66,6 @@
             justify-content: center;
             width: 400px;
             height: 12%;
-            background-color: rgb(77, 77, 77);
-            border-bottom-left-radius: 1.5rem;
-            border-bottom-right-radius: 1.5rem;
 
             .add-friend-input-layout {
                 display: flex;
@@ -100,10 +76,6 @@
                 display: flex;
                 flex-direction: column;
 
-                p, input, button {
-                    background-color: rgb(77, 77, 77);
-                }
-
                 .add-friend-button {
                     width:100%;
                 }
@@ -112,9 +84,6 @@
                     cursor: pointer;
                 }
             }
-        }
-        p {
-            background-color: rgb(32, 32, 32);
         }
         p:hover {
             cursor: pointer;
@@ -154,53 +123,63 @@
     }
 
 }
-.cutoff {
-    background-color: rgb(77, 77, 77);
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-    margin: 1rem;
-    h1, h2, p {
-        background-color: rgb(77, 77, 77);
-    }
-}
 
 .main-content {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
     min-height: 90vh;
     width: 100%;
+    margin: 1rem;
 
     .character-content {
-        background-color: rgb(77, 77, 77);
+        display:flex;
+        flex-direction: column;
+        justify-content: left;
         width: 95%;
-        min-height: 45%;
-        border-top: 2px solid grey;
-        border-radius: 1rem;
+        margin-bottom: 3rem;
+
+        .details {
+            display:flex;
+            flex-direction: column;
+            justify-content: left;
+            font-size: 1.5rem;
+            margin: 1rem;
+        }
+        
+        .cutoff {
+            display: flex;
+            flex-direction: row;
+            justify-content: left;
+            margin-top: 2rem;
+            margin-left: 1rem;
+
+            .cutoff-average {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                margin-left: 2rem;
+            }
+
+            p {
+                color: black;
+            }
+        }
     }
 
     .guild-content {
-        background-color: rgb(77, 77, 77);
         width: 95%;
-        min-height: 45%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        border-top: 2px solid grey;
-        border-radius: 1rem;
+
+        h1 {
+            margin: 1rem;
+        }
 
         .raid-data {
             display: flex;
             flex-direction: row;
-        }
-
-        h1, p {
-            background-color: rgb(77, 77, 77);
+            margin-left: 1rem;
         }
     }
 }
