--- a/app/src/app/raid-widget/raid-widget.component.scss
+++ b/app/src/app/raid-widget/raid-widget.component.scss
@@ -1,7 +1,4 @@
 @import "../app.component.scss";
-* {
-    background-color: rgb(77, 77, 77);
-}
 .container {
     display: flex;
     flex-direction: row;
@@ -19,14 +16,20 @@
         text-align: center;
         max-width: 200px;
         max-height: 300px;
-        margin: 1rem;
+
 
         h2 {
-            font-size: 1.5rem;
+            text-align: center;
+            border: 2px solid rgb(184, 80, 66);
+            min-width: 100px;
+            margin-right: -3px;
+            min-height: 60px;
         }
 
-        h2, p {
-            margin: 0.5rem;
+        p {
+            color: black;
+            margin: 0.3rem;
         }
+
     }
 }
