improve UI, add friend removal

--- a/app/src/app/app.component.scss
+++ b/app/src/app/app.component.scss
@@ -1,9 +1,10 @@
 * {
     h1 {
-        color: rgb(184, 80, 66);
+        color: rgb(1, 10, 49);
         font-size: 3rem;
         font-family: Arial, Helvetica, sans-serif;
     }
+    
     p {
         font-size: 1.25rem;
     }
@@ -18,12 +19,12 @@
     color: rgb(243, 227, 0);
 }
 .green {
-    color: rgb(0, 255, 98);
+    color: rgb(0, 160, 61);
 }
-.death-knight {
+.deathknight {
     color: #C41E3A
 }
-.demon-hunter {
+.demonhunter {
     color: #A330C9
 }
 .druid {
@@ -60,10 +61,10 @@
     color: #C69B6D
 }
 
-.death-knight-background {
+.deathknight-background {
     background-color: #C41E3A
 }
-.demon-hunter-background {
+.demonhunter-background {
     background-color: #A330C9
 }
 .druid-background {
