--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -37,14 +37,30 @@
             align-items: center;
             width: 400px;
             height: 12%;
+            background-color: rgb(8, 8, 8);
 
             img {
                 height: 100%;
             }
 
-            .input-boxes {
-                margin: 0.5rem;
+            p, input, button, div{
+                background-color: rgb(8, 8, 8);
+                font-size: 0.8rem;
             }
+
+            .input-character{
+                display:flex;
+                flex-direction: column;
+                background-color: rgb(8, 8, 8);
+
+                .input-boxes {
+                    display: flex;
+                    flex-direction: row;
+                    margin: 0.5rem;
+                    background-color: rgb(8, 8, 8);
+                }
+            }
+
         
             button {
                 height: 20%;
@@ -58,6 +74,10 @@
             width: 400px;
             height: 12%;
             font-size: 4rem;
+
+            p {
+                font-size: 5rem;
+            }
 
         }
         .add-character-input {
@@ -143,8 +163,13 @@
             display:flex;
             flex-direction: column;
             justify-content: left;
-            font-size: 1.5rem;
+            font-size: 3rem;
             margin: 1rem;
+            font-weight: 600;
+
+            p {
+                font-size: 2rem;
+            }
         }
         
         .cutoff {
@@ -154,15 +179,36 @@
             margin-top: 2rem;
             margin-left: 1rem;
 
+            .title-cutoff {
+                display: flex;
+                flex-direction: column;
+                justify-content: right;
+                text-align: right;
+
+                p {
+                    font-size: 1.5rem;
+                }
+            }
+
+            .splitter {
+                color: rgb(1, 10, 49);
+                margin-left: 1rem;
+                font-size: 2.5rem;
+            }
+
             .cutoff-average {
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
-                margin-left: 2rem;
+                justify-content: left;
+                margin-left: 0.5rem;
+
+                p {
+                    font-size: 1.5rem;
+                }
             }
 
             p {
-                color: black;
+                color: rgb(1, 10, 49);
             }
         }
     }
