--- a/app/src/app/raid-widget/raid-widget.component.scss
+++ b/app/src/app/raid-widget/raid-widget.component.scss
@@ -12,22 +12,24 @@
         width: 100%;
         justify-content: space-between;
         align-items: center;
-        text-transform: capitalize;
         text-align: center;
-        max-width: 200px;
-        max-height: 300px;
 
 
         h2 {
-            text-align: center;
-            border: 2px solid rgb(184, 80, 66);
-            min-width: 100px;
-            margin-right: -3px;
-            min-height: 60px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            border: 4px solid rgb(1, 10, 49);
+            width: 240px;
+            margin-right: -4px;
+            height: 65px;
         }
 
         p {
-            color: black;
+            color: rgb(1, 10, 49);
             margin: 0.3rem;
         }
 
