implement welcome page, add error checking

--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -27,7 +27,7 @@
     }
 
     .side-bar {
-        margin: 1.5rem 1.5rem 1.5rem 0;
+        margin: 3rem;
         height: 94vh;
 
 
@@ -76,6 +76,7 @@
             font-size: 4rem;
 
             p {
+                color: rgb(1, 10, 49);
                 font-size: 5rem;
             }
 
