--- a/app/src/app/raid-widget/raid-widget.component.html
+++ b/app/src/app/raid-widget/raid-widget.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div>
         <h2>{{raidName}}</h2>
-        <p>{{raidProgress}}</p>
-        <p>World: {{raidWorldRanking}}</p>
-        <p>Region: {{raidNARanking}}</p>
+        <p class="m1">{{raidProgress}}</p>
+        <p class="m2">World: {{raidWorldRanking}}</p>
+        <p class="m3">Region: {{raidNARanking}}</p>
     </div>
 </div>
