--- a/app/src/app/raid-widget/raid-widget.component.scss
+++ b/app/src/app/raid-widget/raid-widget.component.scss
@@ -29,9 +29,9 @@
         }
 
         p {
+            text-align: center;
             color: rgb(1, 10, 49);
             margin: 0.3rem;
         }
-
     }
 }
