--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -35,33 +35,39 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            width: 400px;
+            width: 396px;
             height: 12%;
-            background-color: rgb(8, 8, 8);
+            border: 2px solid black;
 
             img {
+                margin-left: -2px;
                 height: 100%;
             }
 
             p, input, button, div{
-                background-color: rgb(8, 8, 8);
                 font-size: 0.8rem;
+                color: rgb(1, 10, 49);
+            }
+
+            button {
+                margin-top: 0.5rem;
+                width: 80%;
             }
 
             button:hover {
-                color: rgb(0, 28, 153);
+                color: rgb(0, 37, 201);
             }
 
             .input-character{
                 display:flex;
                 flex-direction: column;
-                background-color: rgb(8, 8, 8);
+                justify-content: center;
+                align-items: center;
 
                 .input-boxes {
                     display: flex;
                     flex-direction: row;
                     margin: 0.5rem;
-                    background-color: rgb(8, 8, 8);
                 }
             }
 
@@ -99,19 +105,35 @@
             .add-friend-input-layout {
                 display: flex;
                 flex-direction: row;
+                width: 100%;
+                text-align: center;
+                
+                p, input {
+                    color: rgb(1, 10, 49);
+                }
+
+                input {
+                    width: 176px;
+                }
             }
 
             .add-friend-container {
                 display: flex;
                 flex-direction: column;
+                width: 90%;
+                justify-content: center;
+                align-items: center;
 
                 .add-friend-button {
                     width:100%;
+                    height: 30px;
+                    font-size: 1.5rem;
+                    color: rgb(1, 10, 49);
                 }
 
                 .add-friend-button:hover {
                     cursor: pointer;
-                    color: rgb(0, 28, 153);
+                    color: rgb(0, 37, 201);
                 }
             }
         }
@@ -237,6 +259,27 @@
             flex-direction: row;
             margin-left: 1rem;
         }
+    }
+}
+
+footer {
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    padding-right: 1rem;
+    padding-left: 1rem;
+
+    background-color: rgb(1, 10, 49);
+
+    p, a {
+        background-color: rgb(1, 10, 49);
     }
 }
 
