--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -180,7 +180,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 90vh;
+    min-height: 60vh;
     width: 100%;
     margin: 1rem;
 
@@ -264,7 +264,7 @@
 
 footer {
     box-sizing: border-box;
-    position: absolute;
+    position: fixed;
     bottom: 0;
 
     display: flex;
@@ -283,8 +283,15 @@ footer {
     }
 }
 
-@media (max-width: 800px) {
-    .cutoff {
-        font-size: 1.5rem;
+@media (max-width: 1450px) {
+    .page-container {
+        display:flex;
+        flex-direction: column;
+
+        .side-bar {
+            height: 800px;
+            width: 500px;
+    
+        }
     }
   }
