--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -50,8 +50,9 @@
             }
 
             button {
+                margin-left: 1rem;
+                width: 60px;
                 margin-top: 0.5rem;
-                width: 80%;
             }
 
             button:hover {
@@ -60,14 +61,14 @@
 
             .input-character{
                 display:flex;
-                flex-direction: column;
+                flex-direction: row;
                 justify-content: center;
                 align-items: center;
 
                 .input-boxes {
                     display: flex;
-                    flex-direction: row;
-                    margin: 0.5rem;
+                    flex-direction: column;
+                    margin-left: 1rem;
                 }
             }
 
