--- a/app/src/app/fetch-test/fetch-test.component.html
+++ b/app/src/app/fetch-test/fetch-test.component.html
@@ -1,4 +1,4 @@
-
+<app-navbar [characterNameInput]="characterNameInput" [serverNameInput]="serverNameInput"></app-navbar>
 <div class="page-container {{characterFaction}}">
     <div class="main-content">
         <div class="character-content">
