--- a/app/src/app/fetch-test/fetch-test.component.scss
+++ b/app/src/app/fetch-test/fetch-test.component.scss
@@ -14,6 +14,7 @@
     flex-direction: row;
     width: 100%;
     height: 100%;
+    margin-top: 3rem;
 
     .main-content {
         width: 100%;
@@ -265,7 +266,6 @@
 
 footer {
     box-sizing: border-box;
-    position: fixed;
     bottom: 0;
 
     display: flex;
