implement navbar searches

--- a/app/src/app/common/navbar/navbar.component.html
+++ b/app/src/app/common/navbar/navbar.component.html
@@ -4,5 +4,5 @@
                             required>
     <input id="serverName" name="serverName" type="text" aria-label="serverName" [(ngModel)]="serverNameInput"
                             required>
-    <button>Search</button>
+    <button (click)="emitCharacterData()">Search</button>
 </nav>
