--- a/app/src/app/common/navbar/navbar.component.scss
+++ b/app/src/app/common/navbar/navbar.component.scss
@@ -19,4 +19,7 @@ nav {
         margin-left: 2rem;
         background-color: rgb(1, 10, 49);
     }
+    button:hover {
+        color: rgb(81, 102, 197);
+    }
 }
